# Fergcorp_CircuitPython_SSM2518

./: README.rst  fergcorp_ssm2518.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.rst
